# pocat-lektron-sw

./: .cproject  .gitignore  .gitmodules  .mxproject  .mxproject.orig  CMakeLists.txt  Doxyfile  Nucleo-L476RG-COMMS_TEST Debug.launch  README.md  STM32L476RGTX_FLASH.ld  STM32L476RGTX_RAM.ld  build.sh  format.clang-format  pocat-sw Debug.launch  pocat-sw Debug.launch.orig  pocat-sw.ioc
.cache/clangd/index/: FreeRTOS.h.3BA4A74B2875F4C7.idx  FreeRTOSConfig.h.C3453D5DCC2DDBC7.idx  RFI.c.20CCB783D35B3191.idx  RFI.h.827AEC6C366FCA29.idx  RFI_Thread.c.A47BC3E8D9662BDE.idx  RFI_Thread.h.D28D5B0E0E0AB36B.idx  adcs.c.FDB15CA7353E90DA.idx  adcs.h.7809CD905F2700F1.idx  berlekamp.c.73222F05A2D3710D.idx  bit.c.0F49E30D8D05E442.idx  camerav2.c.ABE0DFF7B3561B91.idx  camerav2.h.560E2A36A94529D4.idx  clock.c.D9318526DE656D84.idx  clock.h.2593591453C34420.idx  cmsis_compiler.h.606C0429CFBFFDFD.idx  cmsis_gcc.h.8B1628746777BCEF.idx  cmsis_os.c.3741D41581A8E28C.idx  cmsis_os.h.51303B54AA223623.idx  cmsis_version.h.EF53FA4D7295760B.idx  comms.c.0955B82E73685C6F.idx  comms.h.3F5A524A7CF16A02.idx  convolutional.c.30FD59E855FEB09E.idx  core_cm4.h.BDD6816978919890.idx  correct.h.E1FC7BCC2AA3F4F0.idx  croutine.c.844FD407E6B4690E.idx  croutine.h.476B5A1CB33DB65B.idx  decode.c.ED9948D26A0ED2EA.idx  deprecated_definitions.h.AA8925711D6C287F.idx  ecc.h.0D2FCCE02C828054.idx  ee.c.31580D36AC8863BE.idx  ee.h.7A84008867E7BE1F.idx  eeConfig.h.2BB1ACB372F873AC.idx  encode.c.C1829DD91D132320.idx  error_buffer.c.3861F04C99B3F277.idx  event_groups.c.6698EA4F2E8511A6.idx  event_groups.h.64D0AE957253CA01.idx  freertos.c.1FB8CADCD40CC357.idx  galois.c.2BF687BF5BFCFB57.idx  heap_4.c.3F0322DD935509B6.idx  help_adcs.c.94B8A84CEEE320B2.idx  (+115 more)
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
CommonResources/: flash.c  flash.c.orig
CommonResources/Inc/: definitions.h  flash.h
Core/Inc/: main.h
Core/Src/: main.c  main.c.orig  stm32l4xx_hal_msp.c.orig  stm32l4xx_it.c  stm32l4xx_it.c.orig
Drivers/FreeRTOS/include/: FreeRTOSConfig.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c
Drivers/Semtech/: board.c  sx126x.c  sysIrqHandlers.c
Drivers/Semtech/Inc/: board.h  gpio-board.h  radio.h  sx126x-board.h
Inc/: FreeRTOSConfig.h  comms.h  convolutional.h  correct.h  ecc.h  help_adcs.h  main.h  sgp4.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Inc/Common/: definitions.h  flash.h  notifications.h  telecommands.h
Inc/Drivers/FreeRTOS/include/: FreeRTOSConfig.h
Inc/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c
Inc/HAL/: stm32l4xx_hal_conf.h
Inc/Interrupts/: stm32l4xx_it.h
Inc/RadioLib/src/: BuildOpt.h  BuildOptUser.h  Hal.cpp  Hal.h  Module.cpp  Module.h  RadioLib.h  TypeDef.h
Inc/RadioLib/src/hal/Arduino/: ArduinoHal.cpp  ArduinoHal.h
Inc/RadioLib/src/hal/RPi/: PiHal.h
Inc/RadioLib/src/hal/RPiPico/: PicoHal.cpp  PicoHal.h
Inc/RadioLib/src/modules/SX126x/: STM32WLx.cpp  STM32WLx.h  STM32WLx_Module.cpp  SX1261.cpp  SX1261.h  SX1262.cpp  SX1262.h  SX1268.cpp  SX1268.h  SX126x.cpp  SX126x.h  SX126x_LR_FHSS.cpp  (+4 more)
Inc/RadioLib/src/utils/: CRC.cpp  CRC.h  Cryptography.cpp  Cryptography.h  FEC.cpp  FEC.h  Utils.cpp  Utils.h
Inc/Semtech/: gpio-board.c  spi-board.c  sx126x-board.c
Inc/Subsystems/: adcs.h  comms.h  comms_new.h  eps.h  new_comms.h  obc.h  obdh.h  payload.h
Inc/Tasks/: obc_task.h
Inc/Utils/: RadioLibWrapper.h  clock.h  log.h  periph.h  radiolib_wrapper.h  softTim.h
Inc/Utils/radiolib/: radiolib_wrapper.h  stm32_radiolib_hal.h
Inc/convolutional/: convolutional.h  error_buffer.h  history_buffer.h  metric.h
Inc/reed-solomon/: polynomial.h
Inc/util/: error-sim.h
Semtech/: board.c  gpio-board.c  radio.c  rtc-board.c  uart-board.c
Semtech/Inc/: board.h  spi-board.h  sx126x.h
Src/: RFI.c  RFI_Thread.c  adcs.c  bit.c  decode.c  encode.c  help_adcs.c  history_buffer.c  lookup.c  main.c  periph.c  rs.c  satutl.c
Src/Common/: flash.c
Src/HAL/: stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c
Src/Interrupts/: stm32l4xx_it.c
Src/Subsystems/: adcs.c  comms.c  eps.c  new_comms.c  obc.c  obdh.c  payload.c
Src/Subsystems/Comms/: comms.c  comms_new.c
Src/Subsystems/Comms/Inc/: comms_config.h  comms_internal.h
Src/Subsystems/Obc/: obc.c
Src/Subsystems/Obc/Inc/: obc_internal.h
Src/Subsystems/Payload/: payload.c
Src/Subsystems/Payload/Inc/: payload_internal.h
Src/System/: syscalls.c  sysmem.c  system_stm32l4xx.c
Src/Tasks/: obc_task.c
Src/Utils/: RadioLibWrapper.cpp  clock.c  freertos.c  log.c  periph.c  radiolib_wrapper.cpp  softTim.c  wrapper.cpp
Src/Utils/RadioLib/: radiolib_wrapper.cpp  stm32_radiolib_hal.cpp
Subsystems/ADCS/: adcs.c  help_adcs.c  igrf13.c  igrf13syn.c  orbit_propagators_utils.c  satutl.c  sgp.c  sgp4.c
Subsystems/ADCS/Inc/: adcs.h  igrf13.h  igrf13syn.h  orbit_propagators_utils.h  satutl.h  sgp.h
Subsystems/COMMS/: berlekamp.c  comms.c  comms.c.orig  comms.h  ee.c  galois.c
Subsystems/COMMS/Inc/: comms.h  comms.h.orig  convCodeParams.h  convHelpers.h  ecc.h  ee.h  eeConfig.h  telecommands.h  viterbiDecoder.h  viterbiDecoderButterflyk1.h
Subsystems/COMMS/Inc/correct/: reed-solomon.h
Subsystems/COMMS/convolutional/: convolutional.c  error_buffer.c  metric.c
Subsystems/COMMS/reed-solomon/: decode.c  polynomial.c  reed-solomon.c
Subsystems/EPS/: DS2782E.c
Subsystems/EPS/EPS_Library/: DS2782E.c
Subsystems/EPS/Inc/: DS2782E.h
Subsystems/OBC/: clock.c  obc.c  obc_task.c  softTim.c
Subsystems/OBC/Inc/: obc.h  obc_task.h  periph.h  softTim.h
Subsystems/RFI/: RFI_Thread.c
Subsystems/RFI/Inc/: RFI.h  RFI_Thread.h
Subsystems/VGA/: camerav2.c
Subsystems/VGA/Inc/: camerav2.h
cmake/: toolchain.cmake
doc/: CodingConventions.md
old/: .project  3CAT-NXT Debug.launch
old/.metadata/: .log4j2.xml
old/Core/Inc/: main.h  stm32l4xx_it.h
old/Core/Src/: freertos.c  stm32l4xx_hal_timebase_tim.c
res/doc/: Doxyfile
res/format/: format.sh
scripts/: compile_build.sh
(+29 files in other folders)
